# StenenkoPrizm

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  main.exec
glfw-3.4/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
glfw-3.4/docs/: Doxyfile  Makefile  cmake_install.cmake
glfw-3.4/examples/: Makefile  cmake_install.cmake
glfw-3.4/src/: Makefile  cmake_install.cmake
glfw-3.4/tests/: Makefile  cmake_install.cmake
include/: EBO.h  VAO.h  VBO.h  shaderClass.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw-3.4/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
libs/glfw-3.4/docs/: Doxyfile  Makefile  cmake_install.cmake
libs/glfw-3.4/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  splitview  triangle-opengl  triangle-opengles  wave  windows
libs/glfw-3.4/src/: Makefile  cmake_install.cmake
libs/glfw-3.4/tests/: Makefile  cmake_install.cmake
src/: EBO.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
src/shaders/: default.frag  default.vert
